# tflite-memory-profilier-llvm

./: CMakeLists.txt  TfliteLogger.cpp  TfliteMemoryProfiler.cpp
header/: TfliteMemoryProfiler.h
